--- a/NCacheTestClient/appsettings.json
+++ b/NCacheTestClient/appsettings.json
@@ -1,7 +1,9 @@
 {
-    "NCacheServerSettings": {
-        "ServerIP": "20.200.20.32",
-        "ServerPort": 9080
-    },
-    "SomeSetting": "SomeValue34343434"
+  "NCacheServerSettings": {
+    "ServerIP": "20.200.20.32",
+    "ServerPort": 9080
+  },
+  "SomeSetting": "SomeValue34343434",
+  "ConnectionString": "Server=20.200.16.103;Database=MyStatus;User Id=sa;Password=4Islamabad;"
+
 }
