--- a/NCacheTestClient/NCacheTestClient.csproj
+++ b/NCacheTestClient/NCacheTestClient.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alachisoft.NCache.SDK" Version="5.3.4" />
+    <PackageReference Include="Alachisoft.NCache.SDK" Version="5.3.5" />
     <PackageReference Include="log4net" Version="3.0.4" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
@@ -29,6 +30,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CacheLoader\CacheLoader\CacheLoader.csproj" />
+    <ProjectReference Include="..\..\NCacheServerSide\CacheThrough\CacheThrough.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
